# academic-figure-generator

./: .env.docker.example  .env.example  .gitignore  DEPLOY_VPS.md  LINUXDO_POST.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/.omc/state/: subagent-tracking.json
backend/alembic/: env.py
backend/alembic/versions/: 3d2c0c0b0b2e_merge_heads_generation_error_and_quota_defaults.py  5232e1b7cffe_initial_schema.py  5e5d8670cbfe_add_system_settings_and_user_api_urls.py  9a4d2f3c1b10_add_nanobanana_model_setting.py  a1b2c3d4e5f6_change_default_quota_to_zero.py  e1f2a3b4c5d6_add_paddleocr_fields_to_users.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  color_schemes.py  documents.py  health.py  images.py  projects.py  prompts.py  usage.py
backend/app/core/: exceptions.py  middleware.py  security.py
backend/app/core/prompts/: color_schemes.py  figure_types.py  system_prompt.py
backend/app/models/: __init__.py  base.py  color_scheme.py  database.py  document.py  image.py  project.py  prompt.py  system_settings.py  usage.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  color_scheme.py  common.py  document.py  image.py  project.py  prompt.py  system_settings.py  usage.py
backend/app/services/: __init__.py  auth_service.py  claude_code_service.py  claude_service.py  document_service.py  image_service.py  local_storage_service.py  ocr_service.py  prompt_service.py  storage_service.py  usage_service.py
backend/app/tasks/: celery_app.py  db.py  image_tasks.py  ocr_tasks.py  prompt_tasks.py
backend/data/: app.db
backend/scripts/: init_db.sh  seed_color_schemes.py
(+27 files in other folders)
